# Changelog
All wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* Index Filtern mit Postgres ermöglichen

## [12.57.1] -- 2023-01-16
* Erhöhen der Springboot Version auf 3.0.1, da Artefakt org.springframework.security:spring-security-bom:pom:6.0.0-RC2 in Springboot 3.0.0 nicht gefunden werden konnte und zu Fehlern beim Bauen auf Entwicklerrechnern führte.
* BUGFIX: XProcedures mit Extension korrekt verarbeiten
* ValueSerializer um "rule" ergänzen

## [12.57.0] -- 2023-01-13 -- DO NOT USE!
* Spring Security: Umstellung von `WebSecurityConfigurerAdapter` auf Komponenten-basierende Sicherheit
* Aktualisierung Java 11 LTS auf Java 17 LTS
* Aktualisierung von JavaX auf Jakarta
* Update auf SpringBoot 3.0.0
* `@SpringBootApplication` Annotation OHNE `exclude = { DataSourceAutoConfiguration.class }`, damit automatisch eine `entityManagerFactory` erstellt wird.
* BUGFIX: Für die LDAP-Gruppen wird `xtcasUser` statt der `xtcasUsers` ausgelesen, um die SecurityTokens zu bestimmen.
* Rechtevergabe durch AuthorizationController erleichtern, indem dies durch JPA umgesetzt wird und somit auch Datenbank unabhängig ist.

## [12.56.2] -- 2023-01-10
* Tabellen um Hilfsmethoden erweitert, mit der leichter auf Values zugegriffen werden kann
* toString Methoden Tabellen, Columns, Rows und Values ausbessern
* Auch "com.minova" bei @EntityScan und @EnableJpaRepositories beachten

## [12.56.1] -- 2023-12-09
* Richtiger Release zum Verwenden von CAS als Abhängigkeit

## [12.56.0] -- 2022-12-01
* toString-Methode für Tabellen, Columns, Rows und Values erstellen.
* Die Datei application.mdi wird jetzt anhand der xtcasMdi-Tabelle benutzerspezifisch erzeugt.
* Prüfung auf validen Input für Passwörter beim Inserten und Updaten von DB Usern.
* Auslesen von UserGroupTokens für DB User bei Anfragen.
* SQL-Fehler beim Setup beheben.