@@ -343,13 +343,19 @@ public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
 			}
 			callableErrorStatement.executeUpdate();
 			connection.commit();
+			systemDatabase.freeUpConnection(connection);
 		} catch (SQLException e1) {
 			StringWriter sw = new StringWriter();
 			PrintWriter pw = new PrintWriter(sw);
 			e1.printStackTrace(pw);
+
+			try {
+				connection.close();
+			} catch (SQLException e2) {
+				customLogger.logError("Connection could not be closed: ", e2);
+			}
+
 			customLogger.logError("CAS : Error could not be saved in database." + "/n" + sw.toString(), e1);
-		} finally {
-			systemDatabase.freeUpConnection(connection);
 		}
 	}
 }
